test/fails/bad_casts/any.lgl
// Cannot canonicalize a function with a generic return type not dependent on the input type
// This is enforced to avoid reasoning about the universal quantifier -- necessary due to potentially infinite generic parameterization recursion
canon `u any<`t : vec3, `u vec3;>(`t v) {
    return v as `u;
}

void main() {
    print 1;
}